@@ -103,7 +103,10 @@ return {
 			armwar_laser = {
 				areaofeffect = 8,
 				avoidfeature = false,
+				beamburst = true,
 				beamtime = 0.12,
+				burst = 3,
+				burstrate = 0.3,
 				corethickness = 0.155,
 				craterareaofeffect = 0,
 				craterboost = 0,
@@ -118,7 +121,7 @@ return {
 				name = "Dual close-quarters g2g laser",
 				noselfdamage = true,
 				range = 330,
-				reloadtime = 0.3,
+				reloadtime = 0.9,
 				rgbcolor = "1 0 0",
 				soundhitdry = "",
 				soundhitwet = "sizzle",
@@ -126,7 +129,8 @@ return {
 				soundtrigger = 1,
 				targetmoveerror = 0.2,
 				thickness = 1.85,
-				tolerance = 10000,
+				fireTolerance = 4500,
+				tolerance = 10000,--10000,
 				turret = true,
 				weapontype = "BeamLaser",
 				weaponvelocity = 950,
@@ -142,6 +146,7 @@ return {
 				def = "ARMWAR_LASER",
 				onlytargetcategory = "NOTSUB",
 				fastautoretargeting = true,
+				burstControlWhenOutOfArc = 2,
 			},
 		},
 	},
