@@ -3,10 +3,10 @@ return {
 		maxacc = 0.065,
 		blocking = true,
 		maxdec = 0.065,
-		energycost = 14800,
-		metalcost = 740,
+		energycost = 11400,
+		metalcost = 570,
 		buildpic = "ARMLSHIP.DDS",
-		buildtime = 14800,
+		buildtime = 11400,
 		canmove = true,
 		category = "ALL NOTLAND MOBILE WEAPON NOTSUB SHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 0 4",
@@ -19,8 +19,8 @@ return {
 		footprintz = 4,
 		idleautoheal = 2,
 		idletime = 900,
-		health = 2600,
-		speed = 94.5,
+		health = 2200,
+		speed = 99,
 		minwaterdepth = 6,
 		movementclass = "BOAT4",
 		nochasecategory = "VTOL UNDERWATER",
@@ -33,7 +33,7 @@ return {
 		sightdistance = 500,
 		turninplace = true,
 		turninplaceanglelimit = 90,
-		turnrate = 375,
+		turnrate = 450,
 		waterline = 0,
 		customparams = {
 			unitgroup = 'weapon',
@@ -145,7 +145,7 @@ return {
 					spark_range = "100",
 				},
 				damage = {
-					default = 45,
+					default = 35,
 				},
 			},
 			armamph_missile = {
