@@ -1,18 +1,18 @@
 return {
 	corfship = {
-		maxacc = 0.04,
+		maxacc = 0.06,
 		airsightdistance = 470,
 		autoheal = 1.5,
 		blocking = true,
-		maxdec = 0.04,
-		energycost = 12600,
-		metalcost = 840,
+		maxdec = 0.06,
+		energycost = 9400,
+		metalcost = 630,
 		buildpic = "CORFSHIP.DDS",
-		buildtime = 12600,
+		buildtime = 9400,
 		canmove = true,
 		category = "ALL NOTLAND MOBILE WEAPON NOTSUB SHIP NOTAIR NOTHOVER SURFACE EMPABLE",
 		collisionvolumeoffsets = "0 -5 -2",
-		collisionvolumescales = "29 22 90",
+		collisionvolumescales = "27 20 81",
 		collisionvolumetype = "box",
 		corpse = "DEAD",
 		explodeas = "flamethrowerSelfd",
@@ -21,8 +21,8 @@ return {
 		footprintz = 4,
 		idleautoheal = 2,
 		idletime = 900,
-		health = 3300,
-		speed = 87.0,
+		health = 2700,
+		speed = 93.0,
 		minwaterdepth = 6,
 		movementclass = "BOAT4",
 		nochasecategory = "VTOL UNDERWATER",
@@ -33,7 +33,7 @@ return {
 		sightdistance = 500,
 		turninplace = true,
 		turninplaceanglelimit = 90,
-		turnrate = 350,
+		turnrate = 425,
 		waterline = 0,
 		customparams = {
 			unitgroup = 'weapon',
@@ -147,8 +147,8 @@ return {
 				weapontype = "Flame",
 				weaponvelocity = 400,
 				damage = {
-					default = 30,
-					subs = 20,
+					default = 25,
+					subs = 12,
 				},
 			},
 			aamissile = {
