@@ -3,7 +3,7 @@ return {
 		maxacc = 0.05125,
 		activatewhenbuilt = true,
 		maxdec = 0.1025,
-		energycost = 4775,
+		energycost = 7000,
 		metalcost = 350,
 		buildpic = "CORSALA.DDS",
 		buildtime = 7900,
@@ -133,14 +133,14 @@ return {
 				edgeeffectiveness = 0.15,
 				explosiongenerator = "custom:laserhit-medium",
 				firestarter = 90,
-				fireTolerance = 8820,
-				tolerance = 8820,
+				fireTolerance = 4400,
+				tolerance = 4400,
 				impulseboost = 0,
 				impulsefactor = 0,
 				laserflaresize = 5,
 				name = "Medium g2g Heat Ray",
 				noselfdamage = true,
-				range = 360,
+				range = 340,
 				reloadtime = 1.1,
 				rgbcolor = "1 0.55 0",
 				rgbcolor2 = "0.9 1.0 0.5",
